Fix TypeScript errors

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "https://github.com/githuboftigran/rn-range-slider",
   "main": "index.tsx",
   "scripts": {
-    "test": ""
+    "test": "",
+    "build": "tsc"
   },
   "keywords": [
     "react",
@@ -21,13 +22,15 @@
     "slider",
     "seekbar"
   ],
-  "repository" : {
+  "repository": {
     "type": "git",
     "url": "https://github.com/githuboftigran/rn-range-slider.git"
   },
-  "dependencies": {
-  },
   "devDependencies": {
+    "@types/react": "^18.0.28",
+    "react": "18.2.0",
+    "react-native": "^0.71.3",
+    "typescript": "^4.9.5"
   },
   "license": "MIT"
 }
