--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "react-native": "^0.71.3",
     "typescript": "^4.9.5"
   },
+  "peerDependencies": {
+    "react": ">= 16.8.0",
+    "react-native": ">= 0.60.0",
+    "typescript": ">= 3"
+  },
   "license": "MIT"
 }
